fixed footer issue, no more overlapping

--- a/my-app/public/styles.css
+++ b/my-app/public/styles.css
@@ -14,6 +14,12 @@
   --ff-itim: "Itim", cursive;
 }
 /* GLOBAL STYLING */
+.app-container {
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
+}
+
 body {
   position: relative;
   min-height: 100vh;
@@ -390,7 +396,7 @@ input[type="submit"] {
 /* FOOTER */
 
 .footer {
-  position: absolute;
+  /* position: absolute; */
   display: inline-block;
   bottom: 0;
   left: 0;
